remove create-react-app bloat

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -7,6 +7,11 @@
       "esnext"
     ],
     "allowJs": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
