--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -4,6 +4,6 @@ spring:
       ddl-auto: update # TODO: Change this. Investigate proper database migrations
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   datasource:
-    url: "jdbc:postgresql://172.23.112.1:5432/librarydb"
+    url: "jdbc:postgresql://winhost/librarydb"
     username: postgres
     password: password
