--- a/ui/package.json
+++ b/ui/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "final-form": "^4.20.9",
     "primeicons": "^6.0.1",
     "primereact": "^9.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
